added overlapping layout to research page

--- a/research groups/research groups.html
+++ b/research groups/research groups.html
@@ -7,15 +7,15 @@
     <link rel="stylesheet" href="research groups.css">
 </head>
 <body>
-    <header class="container">
+    <header class="container-header">
         <div class="navbar">
             <img src="comScience_logo.png" class="logo">
             <nav>
                 <ul>
-                    <li><a href="/home/index.html">Home</a></li>
-                    <li><a href="/About/about.html">About</a></li>
-                    <li><a href="/faculty/faculty.html">Faculty</a></li>
-                    <li><a href="/research groups/research groups.html">Research Groups</a></li>
+                    <li><a href="/11288153_DCIT205/home/index.html">Home</a></li>
+                    <li><a href="/11288153_DCIT205/About/about.html">About</a></li>
+                    <li><a href="/11288153_DCIT205/faculty/faculty.html">Faculty</a></li>
+                    <li><a href="/11288153_DCIT205/research groups/research groups.html">Research Groups</a></li>
                 </ul>
             </nav>
             <img src="images.png" class="menu-icon">
@@ -24,7 +24,7 @@
     <main>
         <section>
             <div class="figure">
-                <img src="Education_Illustration_Carnegie+Mellon+University+School+of+Computer+Science_bootstrap+design+co_Work+Page.png">
+                <img src="researchgroups1.png">
                 <h1 id="text-on-image">Computer Science Research Groups</h1>
             </div> 
             <p>
@@ -33,11 +33,171 @@
                 They work closely with nonprofit agencies and industry clients to develop and mature technologies from concept through delivery to end-users. Our diverse 
                 interdisciplinary research also extends into areas not traditionally 
                 considered part of computer science. We invite you to explore our department websites to learn more about our research.
+                Our leading experts are focused on research that's changing the way we interact with technology.
             </p>
         </section>
-        <section>
-            
+        <h1 class="containerheading">
+                Artificial Intelligence
+            </h1><hr>
+        <section class="container-for-text-and-img">
+            <div class="container2">
+                <div class="left"></div>
+                <div class="right">
+                    <div class="content">
+                        <h1>Computer Vision</h1>
+                        <p>
+                            Developing advanced computational methods for automated image analysis and downstream data analytics,
+                            The Computer Vision Group employs methods that are based on solid mathematical and statistical modelling,
+                            as well as data-driven artificial intelligence using machine and deep learning. Research challenges include image 
+                            restoration and reconstruction, super-resolution, image registration, object detection, segmentation, quantification, classification, tracking,
+                            and multimodal analysis of visual and nonvisual data. Primary application areas investigated by the group include medical diagnostics, biological 
+                            research, biomedical informatics, remote sensing, robotics, and manufacturing.
+                        </p>
+                        <a href="#" class="btn">Click</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="container-for-text-and-img">
+            <div class="container2">
+                <div class="left2"></div>
+                <div class="right">
+                    <div class="content">
+                        <h1>Machine Learning</h1>
+                        <p>
+                            With interests in all aspects of machine learning, the research remit of the Machine Learning Group is broad. 
+                            From analysing data in diverse representations such as graphs, images, time series and spatial data, to using 
+                            state-of-the-art methods in data mining, deep learning, reinforcement learning, symbolic learning, learning theory 
+                            and evolutionary computation. The group looks into various application domains, including bioinformatics, biomedical 
+                            image analysis, cybersecurity, human-computer interaction, robotics and recommender systems.  .
+                        </p>
+                        <a href="#" class="btn">Click</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="container-for-text-and-img">
+            <div class="container2">
+                <div class="left5"></div>
+                <div class="right">
+                    <div class="content">
+                        <h1>Knowledge Representation and Reasoning</h1>
+                        <p>
+                            A fundamental assumption in Knowledge Representation and Reasoning is that an agent's 
+                            knowledge is explicitly represented in a declarative form, suitable for processing by dedicated 
+                            reasoning engines. The assumption that much of what an agent deals with is knowledge-based, is 
+                            common in many modern intelligent systems. Our main strengths are in cognitive robotics, reasoning 
+                            about actions and change, AI systems with general intelligence, and computer game playing.  .
+                        </p>
+                        <a href="#" class="btn">Click</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <h1 class="containerheading">
+            Computer Systems
+        </h1><hr>
+        <section class="container-for-text-and-img2">
+            <div class="container2">
+                <div class="left3"></div>
+                <div class="right">
+                    <div class="content">
+                        <h1>Networking and Ubiquitous Computing</h1>
+                        <p>
+                            Developing novel concepts, methods, tools, and technology, the Networking and Ubiquitous Computing research 
+                            group works to investigate the ubiquitous connectivity and sensing underpinning smart environments.  
+                        </p>
+                        <a href="#" class="btn">Click</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="container-for-text-and-img2">
+            <div class="container2">
+                <div class="left4"></div>
+                <div class="right">
+                    <div class="content">
+                        <h1>Formal methods</h1>
+                        <p>
+                            The Formal Methods Group works on the foundations of computation, developing logical and 
+                            probabilistic frameworks for areas of computer science encompassing imperative and logical programming, 
+                            concurrent and distributed computing, computer security and artificial intelligence. 
+                        </p>
+                        <a href="#" class="btn">Click</a>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
+    <footer>
+    <table width="100%" height="50%" cellspacing="1" cellpadding="10"  class="container">
+        <tr>
+            <th><u>Academics</u></th>
+            <th><u>Admission</u></th>
+            <th><u>Research</u></th>
+            <th><u>About the Department</u></th>
+        </tr>
+        <tr>
+            <td><a href="/11288153_DCIT205/Undegraduate programs/Undegraduate programs.html">Undergraduate Courses</a></td>
+            <td>Undergraduate</td>
+            <td><a href="/11288153_DCIT205/research groups/research groups.html">Research at DCS</a></td>
+            <td>Introducing DCS</td>
+        </tr>
+        <tr>
+            <td><a href="/11288153_DCIT205/Msc programmes/msc.html">Courses(MPhil Computer Science)</a></td>
+            <td>Graduate</td>
+            <td>Research Impact</td>
+            <td>Head of Department's office</td>
+        </tr>
+        <tr>
+            <td><a href="/11288153_DCIT205/Msc programmes/msc.html">Graduate Courses(MSc Computer Science)</a></td>
+            <td>International Students</td>
+            <td>Libraries</td>
+            <td><a href="/11288153_DCIT205/faculty/faculty.html">Faculty</a></td>
+        </tr>
+        <tr>
+            <td><a href="/11288153_DCIT205/Phd programmes/phd.html">Graduate Courses(PhD)</a></td>
+            <td>Entry Requirements</td>
+            <td></td>
+            <td><a href="/11288153_DCIT205/events/events.html">Events</a></td>
+        </tr>
+        <tr>
+            <td>Level 200 & 300 Timetable</td>
+        </tr>
+        <tr>
+            <td>Placements For Level 200 Students</td>
+        </tr>
+        <tr>
+            <td>Student Complaint Form</td>
+        </tr>
+        <tr>
+            <th><u>Newsletter</u></th>
+            <th><u><a href="/11288153_DCIT205/Contact/contact.html">Contact Us</a></u></th>
+            <th><u>Location</u></th>
+        </tr>
+        <tr>
+            <td>Stay update with our latest</td>
+            <td>Phone & Email</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>
+                <form>
+                    <label for="email">Email Address:</label>
+                    <input type="email" id="email" name="email" placeholder="Email Address" required>
+                    <button type="submit" class="button">Submit</button>
+                </form>
+            </td>
+            <td> 
+                +233 501 382 <br>
+                 +233 559 145 698<br>
+                e-mail - dcs@ug.edu.gh
+            </td>
+            <td>University Of Ghana,<br> Legon Campus<br>
+                Opposite Mathematics Department</td>
+        </tr>
+    </table>
+    </footer>
 </body>
 </html>
