--- a/Msc programmes/msc.html
+++ b/Msc programmes/msc.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>msc programmes</title>
-    <link rel="stylesheet" href="mcs.css">
+    <link rel="stylesheet" href="msc.css">
 </head>
 <body>
     <header class="container-header">
@@ -104,7 +104,7 @@
             </p>
     </main>
     <footer>
-        <table width="100%" height="50%" cellspacing="1" cellpadding="10"  class="container">
+        <table width="100%" height="50%" cellspacing="1" cellpadding="10"  class="container2">
             <tr>
                 <th><u>Academics</u></th>
                 <th><u>Admission</u></th>
