added images for short courses

--- a/home/index.html
+++ b/home/index.html
@@ -23,7 +23,7 @@
     </header>
     <main>
         <div>
-            <video src="video-bg.mp4" >Not supported by browser</video>
+            <video src="video-bg.mp4" autoplay>Not supported by browser</video>
         </div>
         <section>
             <div class="shortcourses">
@@ -40,10 +40,44 @@
             </p>
             <h5>Evening and Weekend Session Only</h5>
         </div>
-
-
+        <section class="container4">
+            <div class="container3">
+                <div class="card">
+                    <img src="1.png" id="img">
+                    <div class="intro">
+                        <h1>Computer Network Fundamentals</h1>
+                        <p id="p">
+                            We provide quality education for students to become a Certified Network Associate
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="container3">
+                <div class="card">
+                    <img src="2.jpg" id="img">
+                    <div class="intro">
+                        <h1>Information Security and Ethical Hacking</h1>
+                        <p id="p">
+                            Learn the various techniques to secure a system.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="container3">
+                <div class="card">
+                    <img src="3.png" id="img">
+                    <div class="intro">
+                        <h1>Introduction to Web Programming </h1>
+                        <p id="p">
+                            Understand the fundamentals of web technologies and create web based applications
+                        </p>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </section>
     </main>
-    <footer>
+    <footer style="margin-top: 130px;">
         <table width="100%" height="50%" cellspacing="1" cellpadding="10"  class="container2">
             <tr>
                 <th><u>Academics</u></th>
