--- a/Short courses/short courses.html
+++ b/Short courses/short courses.html
@@ -74,14 +74,8 @@
                         <h5><pre>FREE*    AVAILABLE NOW</pre></h5>
                     </div>
                 </div>
-            </section>
-            <section class="animation">
-                <div>
-                    <p>yguhhiogoi</p>
-                </div>
-            </section>
         </main>
-        <footer>
+        <footer style="margin-top: 180px;">
             <table width="100%" height="50%" cellspacing="1" cellpadding="10"  class="container">
                 <tr>
                     <th><u>Academics</u></th>
