--- a/Undergraduate programs/Undergraduate programs.html
+++ b/Undergraduate programs/Undergraduate programs.html
@@ -59,13 +59,93 @@
                 </div>
             </section>
             <section style="margin-top: 20px;"><hr>
-                <div>
-                    
+                <div class="container3">
+                    <div class="course">
+                        <h3>Computer Science</h3>
+                        <p>Level 100</p>
+                        <p>Level 200</p>
+                        <p>Level 300</p>
+                        <p>Level 400</p>
+                    </div>
+                    <div class="it">
+                        <h3>Information Technology</h3>
+                        <p>Level 100</p>
+                        <p>Level 200</p>
+                        <p>Level 300</p>
+                        <p>Level 400</p>
+                    </div>
                 </div>
             </section>
     </main>
     <footer>
-
+        <table width="100%" height="50%" cellspacing="1" cellpadding="10"  class="container2">
+            <tr>
+                <th><u>Academics</u></th>
+                <th><u>Admission</u></th>
+                <th><u>Research</u></th>
+                <th><u>About the Department</u></th>
+            </tr>
+            <tr>
+                <td><a href="/11288153_DCIT205/Undegraduate programs/Undegraduate programs.html">Undergraduate Courses</a></td>
+                <td>Undergraduate</td>
+                <td><a href="/11288153_DCIT205/research groups/research groups.html">Research at DCS</a></td>
+                <td>Introducing DCS</td>
+            </tr>
+            <tr>
+                <td><a href="/11288153_DCIT205/Msc programmes/msc.html">Courses(MPhil Computer Science)</a></td>
+                <td>Graduate</td>
+                <td>Research Impact</td>
+                <td>Head of Department's office</td>
+            </tr>
+            <tr>
+                <td><a href="/11288153_DCIT205/Msc programmes/msc.html">Graduate Courses(MSc Computer Science)</a></td>
+                <td>International Students</td>
+                <td>Libraries</td>
+                <td><a href="/11288153_DCIT205/faculty/faculty.html">Faculty</a></td>
+            </tr>
+            <tr>
+                <td><a href="/11288153_DCIT205/Phd programmes/phd.html">Graduate Courses(PhD)</a></td>
+                <td>Entry Requirements</td>
+                <td></td>
+                <td><a href="/11288153_DCIT205/events/events.html">Events</a></td>
+            </tr>
+            <tr>
+                <td>Level 200 & 300 Timetable</td>
+            </tr>
+            <tr>
+                <td>Placements For Level 200 Students</td>
+            </tr>
+            <tr>
+                <td>Student Complaint Form</td>
+            </tr>
+            <tr>
+                <th><u>Newsletter</u></th>
+                <th><u><a href="/11288153_DCIT205/Contact/contact.html">Contact Us</a></u></th>
+                <th><u>Location</u></th>
+            </tr>
+            <tr>
+                <td>Stay update with our latest</td>
+                <td>Phone & Email</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>
+                    <form>
+                        <label for="email">Email Address:</label>
+                        <input type="email" id="email" name="email" placeholder="Email Address" required>
+                        <button type="submit" class="button">Submit</button>
+                    </form>
+                </td>
+                <td> 
+                    +233 501 382 <br>
+                     +233 559 145 698<br>
+                    e-mail - dcs@ug.edu.gh
+                </td>
+                <td>University Of Ghana,<br> Legon Campus<br>
+                    Opposite Mathematics Department</td>
+            </tr>
+        </table>
     </footer>
 </body>
 </html>
